--- a/upload.html
+++ b/upload.html
@@ -24,6 +24,6 @@
         </form>
     </div>
 
-    <script src="js/upload.js"></script>
+    <script src="app/js/upload.js"></script>
 </body>
 </html>
