--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Platafroma de Onboarding de Leads para operação de crédito</h1>
             <div class="buttons">
                 <a href="prospect.html" class="button simulate-loan">Simular Empréstimo</a>
-                <a href="admin/login.html" class="button login">Login</a>
+                <a href="admin.html" class="button login">Login</a>
             </div>
         </div>
     </div>
